test/conformance/chainsaw/validating-policies/exceptions/wrong-exception/exception.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: PolicyException
metadata:
  name: check-name
spec:
  policyRefs:
    - name: not-check-deployment-labels
      kind: ValidatingPolicy
  matchConditions:
    - name: "check-name"
      expression: "object.metadata.name == 'bad-deployment'"
