test/conformance/chainsaw/validating-policies/exceptions/wrong-exception/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: exception-test
spec:
  steps:
  - name: create exception
    try:
    - create:
        file: exception.yaml
    - sleep:
        duration: 10s
  - name: create policy
    use:
      template: ..//../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait-validating-policy-ready
    use:
      template: ../../../_step-templates/validating-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: check-deployment-labels
        - name: message
          value: ""
  - name: create good deployment
    try:
    - create:
        file: good-deployment.yaml
  - name: create skipped deployment
    try:
    - create:
        file: skipped-deployment.yaml
        expect:
          - check:
              ($error): >-
                 admission webhook "vpol.validate.kyverno.svc-fail" denied the request: Policy check-deployment-labels failed: Deployment labels must be env=prod
